[package]
name = "blatten-data-api"
version = "0.1.0"
edition = "2021"
description = "STAC API server for the Birch Glacier Collapse Dataset"
license = "MIT"
repository = "https://github.com/ALPOLE/blatten-data-api"

[[bin]]
name = "blatten-api"
path = "src/main.rs"

[[bin]]
name = "stac-gen"
path = "src/bin/stac_gen.rs"
required-features = ["generator"]

[features]
default = []
generator = ["dep:csv", "dep:gdal", "dep:las", "dep:zip", "dep:regex", "dep:rayon", "dep:indicatif", "dep:walkdir", "dep:reqwest", "dep:sha2", "dep:xxhash-rust", "dep:serde_yaml"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# STAC types (official implementation)
stac = "0.10"
stac-api = "0.6"
geojson = "0.24"
geo-types = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Fuzzy text search
strsim = "0.11"

# Generator-specific dependencies (optional)
csv = { version = "1", optional = true }
gdal = { git = "https://github.com/georust/gdal", features = ["bindgen"], optional = true }
las = { version = "0.9", features = ["laz"], optional = true }
zip = { version = "2", optional = true }
regex = { version = "1", optional = true }
rayon = { version = "1.10", optional = true }
indicatif = { version = "0.17", optional = true }
walkdir = { version = "2.4", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
sha2 = { version = "0.10", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh64"], optional = true }
serde_yaml = { version = "0.9", optional = true }

[profile.release]
lto = true
codegen-units = 1
